hphp/test/zend/good/ext/standard/tests/general_functions/header_redirection_011.php
<?php
header('HTTP/1.1 305 Use Proxy');
header('Location: http://example.com/');
?>
