hphp/test/zend/bad/ext-posix/posix_getpwnam.php
<?php

var_dump(posix_getpwnam(1));
var_dump(posix_getpwnam(''));
var_dump(posix_getpwnam(NULL));

?>